Tidied everything up. Starting to add Model import too

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -30,6 +30,8 @@
         <internalFileTemplate name="LeafModel"/>
         <internalFileTemplate name="View"/>
         <internalFileTemplate name="ViewBridge"/>
+
+        <defaultLiveTemplatesProvider implementation="com.gmail.robmadeyou.compost.templates.CompostLiveTemplateProvider"/>
     </extensions>
 
     <depends>com.jetbrains.php</depends>
@@ -38,10 +40,12 @@
     <actions>
         <group id="RhubarbMenu" text="Rhubarb" popup="true" icon="CompostIcons.RHUBARB_ICON">
             <add-to-group group-id="NewGroup" anchor="first"/>
-            <action id="AddLeafDialog" class="com.gmail.robmadeyou.compost.actions.AddLeafDialog" text="New Leaf"
+            <action id="AddLeafDialog" class="com.gmail.robmadeyou.compost.actions.AddLeaf" text="New Leaf"
                     description="Adding leafs yo">
                 <keyboard-shortcut keymap="$default" first-keystroke="shift alt E"/>
             </action>
+            <action id="ModelCreate" class="com.gmail.robmadeyou.compost.actions.ModelCreate" text="Model Create"
+                    description="Create a Rhubarb model"/>
         </group>
     </actions>
 
